# mdpi-fastapi-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: getting-started.md  index.md  links.md
docs/api/: auth.md  cities.md  favorites.md
mdpi_api/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
mdpi_api/db/: base.py  utils.py
mdpi_api/db/dao/: city_dao.py  dummy_dao.py  user_dao.py  weather_dao.py
mdpi_api/db/migrations/: env.py
mdpi_api/db/migrations/versions/: 2024-09-22-12-49_832273a50d28.py  2024-09-22-16-41_b0ad02727708.py  2024-09-22-17-26_bc1c4474854e.py  2024-09-22-20-06_5ddd8bb61a19.py  2024-09-22-20-18_2d1d0add32dc.py  2024-09-22-20-21_a17c8c453503.py  2024-09-22-20-39_9bb669f002a0.py  2024-09-22-21-32_f8aa0866721b.py  2024-09-23-21-48_43b526aa1da7.py
mdpi_api/db/models/: __init__.py  city_model.py  dummy_model.py  favorite_cities_model.py  user_model.py  weather_model.py
mdpi_api/db/seeders/: data.py  initial_data.py
mdpi_api/integrations/: __init__.py  weather_client.py
mdpi_api/localization/: i18n_middleware.py  translator.py
mdpi_api/localization/en/: response_messages.py
mdpi_api/localization/sr/: response_details.py  response_messages.py
mdpi_api/services/: __init__.py  auth_service.py  city_service.py  jwt_service.py  scheduler_service.py  weather_service.py
mdpi_api/tests/: __init__.py  test_auth.py
mdpi_api/web/: __init__.py  application.py  dependencies.py  lifetime.py
mdpi_api/web/api/: __init__.py  exception_handlers.py  router.py
mdpi_api/web/api/auth/: __init__.py  views.py
mdpi_api/web/api/cities/: __init__.py  views.py
mdpi_api/web/api/docs/: __init__.py
mdpi_api/web/api/dummy/: __init__.py  views.py
mdpi_api/web/api/echo/: __init__.py  views.py
mdpi_api/web/api/errors/: auth.py  city.py  weather.py
mdpi_api/web/api/favorites/: __init__.py  views.py
mdpi_api/web/api/monitoring/: __init__.py
mdpi_api/web/api/schemas/: api_response.py  auth.py  city.py  common.py  weather.py
mdpi_api/web/middlewares/: jwt_bearer.py  rate_limiter.py
mdpi_api/web/utils/: token_bucket.py
